--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.5.0",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
