--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
