--- a/worker/package.json
+++ b/worker/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/pg": "^8.11.10",
+    "dotenv": "^16.4.5",
     "pg": "^8.13.0",
     "redis": "^4.7.0",
     "uuid": "^10.0.0"
@@ -16,6 +17,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.7.5",
     "@types/uuid": "^10.0.0"
   }
 }
