--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.1.2",
@@ -25,9 +25,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "dotenv": "^16.4.5",
-    "framer-motion": "^11.5.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.438.0",
+    "motion": "^12.3.1",
     "next": "14.2.7",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
