--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
@@ -27,7 +28,7 @@
     "dotenv": "^16.4.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.438.0",
-    "motion": "^12.3.1",
+    "motion": "^12.4.1",
     "next": "14.2.7",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
