--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tabler/icons-react": "^3.14.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "dotenv": "^16.4.5",
@@ -32,6 +33,7 @@
     "next": "14.2.7",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
