--- a/services/websocketInClasses/package.json
+++ b/services/websocketInClasses/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/ws": "^8.5.13",
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "ws": "^8.18.0"
   }
 }
